--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Temporary files
+tmp
+
+# Pycharm files
+**/.idea
+
 # C extensions
 *.so
 
@@ -37,7 +43,7 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# Unit test_submissions / coverage reports
 htmlcov/
 .tox/
 .nox/
