--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -1,6 +1,9 @@
 name: Publish Python distributions to PyPI and TestPyPI
 
-on: push
+on:
+  push:
+  release:
+    types: [created]
 
 jobs:
   build-n-publish:
